tests/NormalTests/paczka1/fuzzy1/49379564.err
Error in line 2: Gw7 S913 87,6
Error in line 10: EwQtlLk A37 55,56
Error in line 12: 6XqzXN A642 92,2
Error in line 5: EwQtlLk A37 77,2
Error in line 16: Gw7 A675 91,5
Error in line 15: 6XqzXN A675 34,7
Error in line 20: A37 S913 42,0
